# MedEducation

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: sources.yaml
src/mededucation/: __init__.py  cli.py
src/mededucation/chat/: __init__.py  engine.py
src/mededucation/chunking/: __init__.py  high_quality.py
src/mededucation/ingest/: __init__.py  epub_processor.py  pdf_processor.py
src/mededucation/llm/: __init__.py  client.py
src/mededucation/models/: __init__.py  content.py
src/mededucation/prompts/: __init__.py  system.py
src/mededucation/storage/: __init__.py  vector_store.py
src/mededucation/web/: __init__.py  app.py
